[gd_scene load_steps=15 format=3 uid="uid://bmvucb5o0erbm"]

[ext_resource type="Script" path="res://BattleSystem.gd" id="1_2an33"]
[ext_resource type="Texture2D" uid="uid://dnadalelko0ik" path="res://blueface1.png" id="2_0mdpi"]
[ext_resource type="Texture2D" uid="uid://bbrnbm4nnq2yw" path="res://altface2.png" id="3_qffdh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yx05h"]
bg_color = Color(0, 0, 0, 0.490196)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yuvv4"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_34eqc"]
bg_color = Color(0.423529, 0.0980392, 0.12549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xjbkb"]
bg_color = Color(0.941176, 0, 0.317647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xsk28"]
bg_color = Color(0.129412, 0.129412, 0.129412, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66mq8"]
bg_color = Color(0.67451, 0.184314, 0.0862745, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hkvvg"]
bg_color = Color(0.00392157, 0.00392157, 0.00392157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nqxbi"]
bg_color = Color(0, 0, 0, 0.843137)

[sub_resource type="Animation" id="Animation_j4w21"]
resource_name = "SizeChange1"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3)]
}

[sub_resource type="Animation" id="Animation_d635j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2wi84"]
_data = {
"RESET": SubResource("Animation_d635j"),
"SizeChange1": SubResource("Animation_j4w21")
}

[node name="BattleSystem" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2an33")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 407.0
offset_top = 145.0
offset_right = 612.0
offset_bottom = 387.0
texture = ExtResource("2_0mdpi")
expand_mode = 3
stretch_mode = 3

[node name="Player" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerPanel" type="Panel" parent="Player"]
layout_mode = 0
offset_top = 575.0
offset_right = 1151.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_yx05h")

[node name="HBoxContainer" type="HBoxContainer" parent="Player"]
layout_mode = 0
offset_left = 250.0
offset_top = 574.0
offset_right = 1148.0
offset_bottom = 645.0
theme_override_constants/separation = 6

[node name="Fight_button" type="Button" parent="Player/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_yuvv4")
theme_override_styles/hover = SubResource("StyleBoxFlat_34eqc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xjbkb")
text = "Fight"

[node name="Flee_button" type="Button" parent="Player/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_yuvv4")
theme_override_styles/hover = SubResource("StyleBoxFlat_34eqc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xjbkb")
text = "Flee"

[node name="Textbox" type="Panel" parent="Player/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.41
theme_override_styles/panel = SubResource("StyleBoxFlat_xsk28")

[node name="Text" type="Label" parent="Player/HBoxContainer/Textbox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 12.0
offset_right = -15.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
autowrap_mode = 3

[node name="Healthbar" type="ProgressBar" parent="Player"]
custom_minimum_size = Vector2(150, 16)
layout_mode = 2
offset_left = 1.0
offset_top = 576.0
offset_right = 234.0
offset_bottom = 599.0
theme_override_styles/background = SubResource("StyleBoxFlat_66mq8")
theme_override_styles/fill = SubResource("StyleBoxFlat_hkvvg")
value = 50.0
show_percentage = false

[node name="Health" type="Label" parent="Player/Healthbar"]
layout_mode = 0
offset_right = 211.0
offset_bottom = 26.0
text = "HP: 5/10"
horizontal_alignment = 1

[node name="Emotion" type="Label" parent="Player"]
layout_mode = 2
offset_left = 6.0
offset_top = 619.0
offset_right = 169.0
offset_bottom = 645.0
text = "Emotion_placeholder"

[node name="Player_Name" type="Label" parent="Player"]
layout_mode = 2
offset_left = 1.0
offset_top = 598.0
offset_right = 50.0
offset_bottom = 624.0
text = "Player"

[node name="Panel" type="Panel" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 71.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.82
theme_override_styles/panel = SubResource("StyleBoxFlat_nqxbi")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 71.0
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 67.0
offset_right = 1153.0
offset_bottom = 571.0
color = Color(0, 0, 0, 0.721569)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_2wi84")
}

[node name="Altface2" type="Sprite2D" parent="."]
position = Vector2(576.5, 295)
scale = Vector2(8.02098, 5.04)
texture = ExtResource("3_qffdh")

[connection signal="pressed" from="Player/HBoxContainer/Fight_button" to="." method="_on_fight_button_pressed"]
[connection signal="pressed" from="Player/HBoxContainer/Flee_button" to="." method="_on_flee_button_pressed"]
